--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -34,6 +34,7 @@
 			text-align: center;
 			margin: 0px;
 			font-size: 28px;
+			color: white;
 		}
 
 		.body {
@@ -61,6 +62,7 @@
 
 				p {
 					font-size: 16px;
+					color: white;
 
 					&::first-letter {
 						font-size: 28px;
@@ -83,7 +85,7 @@
 					gap: 5px;
 
 					a {
-						color: black;
+						color: white;
 						font-size: 12px;
 						text-decoration: underline;
 						cursor: pointer;
