--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,3 +1,25 @@
 .main{
-    font-family: Lexend;
+    font-family: "Azeret Mono", monospace;
+}
+
+.project{
+    font-family: "Azeret Mono", monospace;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    color: azure;
+}
+
+.projectsContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem; // Consistent spacing between projects
+}
+  
+.projectWrapper {
+    width: 100%;
 }
