--- a/src/common/RoundedButton/style.module.scss
+++ b/src/common/RoundedButton/style.module.scss
@@ -27,5 +27,5 @@
     position: absolute;
     border-radius: 50%;
     top: 100%;
-    background-color: #c1ff5dcd;
+    background: linear-gradient(180deg, #d37e00 30%, #884d00 80%);
 }
