--- a/src/components/Contact/styles.module.scss
+++ b/src/components/Contact/styles.module.scss
@@ -1,92 +1,87 @@
-.contact{
+.contact {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #141516;
-    position: absolute;
-    .button{
-        border-radius: 3em;
-        border: 1px solid rgb(136, 136, 136);
-        cursor: pointer;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 15px 60px 15px 60px;
+    position: relative; // Changed from absolute to relative
+    background-image: url('/images/background.webp'); // Add your background image path here
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     
-        p{
-            position: relative;
-            z-index: 1;
-            transition: color 0.4s linear;
-        }
-    
+    // Add a dark overlay to make text readable over the background image
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(20, 21, 22, 0.85); // Dark overlay with slight transparency
+        z-index: 0;
     }
-    .body{
+
+    .body {
         width: 100%;
         max-width: 1800px;
-        background-color: #141516;
+        position: relative;
+        z-index: 1; // Ensure content is above the overlay
 
-        .title{
+        .title {
             border-bottom: 1px solid rgb(134, 134, 134);
             padding-bottom: 100px;
             margin-left: 200px;
             margin-right: 200px;
             position: relative;
-            span{
+
+            span {
                 display: flex;
                 align-items: center;
-                .imageContainer{
+
+                .decorativeElement {
                     width: 100px;
                     height: 100px;
                     position: relative;
-                    border-radius: 50%;
-                    overflow: hidden;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-right: 10px;
 
-                    img{
-                        object-fit: cover;
+                    .circle {
+                        position: absolute;
+                        width: 80px;
+                        height: 80px;
+                        border-radius: 50%;
+                        border: 3px solid rgb(255, 255, 255);
+                        // background: linear-gradient(45deg, #ffffff, #464646);
+                        box-shadow: 0 0 15px rgba(41, 41, 41, 0.7);
                     }
                 }
-                h2{
+
+                h2 {
                     margin-left: 0.3em;
                 }
             }
-            h2{
+
+            h2 {
                 font-size: 5vw;
                 margin: 0px;
                 font-weight: 300;
             }
-            .buttonContainer{
+
+            .buttonContainer {
                 position: absolute;
-                left: calc(100% - 400px); 
-                top: calc(100% - 75px);
-                .rounded{
-        width: 180px;
-        height: 180px;
-        background-color: #455CE9;
-        color: white;
-        border-radius: 50%;
-        position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        padding: 0px;
-        p{
-            margin: 0px;
-            font-size: 16px;
-            font-weight: 300;
-            z-index: 2;
-            position: relative;
-        }
-    }
-                .button{
+                left: calc(100% - 400px);
+                top: calc(100% - 70px);
+
+                .rounded {
                     width: 180px;
                     height: 180px;
-                    background-color: #455CE9;
+                    background: rgba(255, 255, 255, 0);
                     color: white;
                     border-radius: 50%;
                     position: absolute;
@@ -95,45 +90,88 @@
                     justify-content: center;
                     cursor: pointer;
                     padding: 0px;
-                    p{
+                    transition: transform 0.3s ease;
+
+                    &:hover {
+                        transform: scale(1.05);
+                    }
+
+                    p {
                         margin: 0px;
-                        font-size: 16px;
+                        font-size: 20px;
                         font-weight: 300;
                         z-index: 2;
                         position: relative;
                     }
                 }
             }
-            
-            svg{
+
+            svg {
                 position: absolute;
-                top: 30%;
-                left: 100%;
+                top: 90%;
+                left: 92%;
             }
         }
-        .nav{
+
+        .nav {
             display: flex;
             gap: 20px;
             margin-top: 100px;
             margin-left: 200px;
             margin-right: 200px;
+
+            .button {
+                border-radius: 3em;
+                border: 1px solid rgb(136, 136, 136);
+                cursor: pointer;
+                position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 15px 30px;
+                text-decoration: none;
+                color: white;
+                transition: all 0.3s ease;
+                background-color: rgba(20, 21, 22, 0.5); // Semi-transparent background
+
+                &:hover {
+                    background-color: rgba(255, 136, 0, 0.2);
+                    border-color: #ff9a00;
+                }
+
+                .icon {
+                    margin-right: 10px;
+                    color: #ffffff;
+                }
+
+                p {
+                    position: relative;
+                    z-index: 1;
+                    transition: color 0.4s linear;
+                    margin: 0;
+                }
+            }
         }
-        .info{
+
+        .info {
             display: flex;
             justify-content: space-between;
             margin-top: 100px;
-            padding: 20px;
-            div{
+            padding: 20px 200px;
+
+            div {
                 display: flex;
                 gap: 10px;
-                align-items: flex-end;
-                p, h3{
+                align-items: flex-start;
+
+                p, h3 {
                     margin: 0px;
                     padding: 2.5px;
-                    cursor: pointer;
                 }
-                p{
-                    &::after{
+
+                p {
+                    cursor: pointer;
+                    &::after {
                         content: "";
                         width: 0%;
                         height: 1px;
@@ -145,25 +183,90 @@
                         transform: translateX(-50%);
                         transition: width 0.2s linear;
                     }
-                    &:hover{
-                        &::after{
+                    &:hover {
+                        &::after {
                             width: 100%;
                         }
                     }
                 }
-                span{
+
+                span {
                     display: flex;
                     flex-direction: column;
                     gap: 15px;
                 }
-                h3{
+
+                h3 {
                     color: grey;
                     cursor: default;
                     font-weight: 300;
                     font-size: 1em;
                 }
             }
-            
+        }
+
+        .socials {
+            .socialLinks {
+                display: flex;
+                gap: 20px;
+                margin-top: 15px;
+
+                .socialIcon {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 42px;
+                    height: 42px;
+                    border-radius: 50%;
+                    background-color: rgba(255, 255, 255, 0.05);
+                    color: white;
+                    transition: all 0.3s ease;
+                    border: 1px solid transparent;
+                    
+                    &:hover {
+                        background-color: rgba(255, 136, 0, 0.2);
+                        border-color: #ff9a00;
+                        color: white;
+                        transform: translateY(-3px);
+                    }
+                }
+            }
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        .body {
+            .title {
+                margin-left: 20px;
+                margin-right: 20px;
+                padding-bottom: 70px;
+
+                h2 {
+                    font-size: 5vw;
+                }
+
+                .buttonContainer {
+                    display: none;
+
+                    .rounded {
+                        display: none;
+                    }
+                }
+            }
+
+            .nav {
+                flex-direction: column;
+                margin-left: 20px;
+                margin-right: 20px;
+                margin-top: 70px;
+            }
+
+            .info {
+                flex-direction: column;
+                gap: 30px;
+                margin-top: 50%;
+                padding: 20px;
+            }
         }
     }
 }
