--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,5 +1,4 @@
 .header{
-    font-family: Lexend;
     position: absolute;
     display: flex;
     z-index: 5;
@@ -51,7 +50,7 @@
                 }
                 .abdul{
                     transform: translateX(-81px);
-                    background: linear-gradient(180deg, #c1ff5d 20%, #ffffff 100%);
+                    background: linear-gradient(180deg, #ffd700 20%, #ffffff 100%);
                     color:transparent;
                     -webkit-background-clip: text;
                     background-clip: text;
@@ -59,7 +58,7 @@
                 }
                 .majeed{
                     transform: translateX(-83px);
-                    background: linear-gradient(180deg, #c1ff5d 20%, #ffffff 100%);
+                    background: linear-gradient(180deg, #ffd700 20%, #ffffff 100%);
                     color:transparent;
                     -webkit-background-clip: text;
                     background-clip: text;
@@ -80,7 +79,7 @@
             cursor: pointer;
             font-weight: 400;
             &:hover{
-                background: linear-gradient(180deg, #c1ff5d 30%, #ffffff 80%);
+                background: linear-gradient(180deg, #ffd700 30%, #ffffff 80%);
                 color:transparent;
                 background-clip: text;
                 font-weight: 600;
