landing css update

--- a/src/components/Landing/style.module.scss
+++ b/src/components/Landing/style.module.scss
@@ -715,7 +715,7 @@
       /* Mobile responsive adjustments */
   @media screen and (max-width: 1024px) {
     .description {
-      right: 8%;
+      left: 8%;
     }
     
     .switchContainer {
@@ -739,7 +739,7 @@
     }
     
     .description {
-      right: 5%;
+      left: 5%;
       top: 10%;
       
       p {
@@ -812,7 +812,7 @@
     }
     
     .description {
-      right: 5%;
+      left: 5%;
       top: 10%;
       
       p {
