--- a/src/components/Landing/style.module.scss
+++ b/src/components/Landing/style.module.scss
@@ -122,7 +122,7 @@
     
     .slider p{
       color: rgb(207, 207, 207);
-      font-family: Lexend;
+      font-family: "Lexend";
       position: relative;
       margin: 0px;
       font-size: 230px;
