--- a/src/components/Projects/ProjectsSection.module.scss
+++ b/src/components/Projects/ProjectsSection.module.scss
@@ -1,5 +1,5 @@
 .project{
-  font-family: "Azeret Mono", monospace;
+  font-family: var(--font-azeret-mono), monospace;
   width: 100%;
   height: 100%;
   display: flex;
