removed the spacer and added in right spot

--- a/src/components/AI/style.module.scss
+++ b/src/components/AI/style.module.scss
@@ -157,6 +157,14 @@
   }
 }
 
+.spacer {
+  height: 0;
+  
+  @media (max-width: 768px) {
+    height: 10vh;
+  }
+}
+
 @media (max-width: 768px) {
   .aiSection {
     padding: 0;
