added Highlighter to about text

--- a/src/components/Landing/style.module.scss
+++ b/src/components/Landing/style.module.scss
@@ -24,6 +24,11 @@
       height: auto;
     }
 
+    .bold {
+      font-weight: 900;
+      color: white;
+    }
+
     img{
       pointer-events: none;
       object-fit: cover;
